syntax = "proto3";

package smservice;

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}